add spinner parent folder

--- a/app/src/main/res/layout/bottom_sheet_create_deck.xml
+++ b/app/src/main/res/layout/bottom_sheet_create_deck.xml
@@ -34,15 +34,18 @@
         android:layout_marginBottom="16dp" />
 
 
-
-
-    <EditText
-        android:id="@+id/SelectedFolder"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Institution"
+        android:text="Selected parent folder" />
+
+    <Spinner
+        android:id="@+id/folderSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:padding="16dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"/>
 
 
     <Button
